// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package org.chromium.chrome.browser.page_insights.proto;

option java_package = "org.chromium.chrome.browser.page_insights.proto";

option optimize_for = LITE_RUNTIME;

message PageInsightsConfig {
  optional bool should_auto_trigger = 1;
  optional bool should_xsurface_log = 2;
  optional bool should_attach_gaia_to_request = 3;
}
